--- a/app/browserWindows/main/main.css
+++ b/app/browserWindows/main/main.css
@@ -1,4 +1,8 @@
-body {
-    max-width: 700px;
-    margin: 0 auto;
+.runners {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
+    grid-auto-rows: minmax(325px, auto);
+    column-gap: 10px;
+    row-gap: 10px;
+    margin: 10px;
 }
