--- a/app/Components/runner/runner.css
+++ b/app/Components/runner/runner.css
@@ -9,7 +9,7 @@ span.badge {
     padding: 5px;
 }
 
-.terminal {
+.dterminal {
     background-color: rgb(0, 36, 81);
     color: #cccccc;
     white-space: pre-line;
