--- a/app/Components/runner/runner.html
+++ b/app/Components/runner/runner.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="../../../node_modules/bootstrap-css-only/css/bootstrap.css">
 
+<link rel="stylesheet" href="../../../node_modules/xterm/dist/xterm.css" />
+
 <h1 class="name"></h1>
 <div class="d-flex justify-content-between align-items-center pb-2">
     <span class="state badge"></span>
