More modal changes

--- a/app/Components/modal/modal.css
+++ b/app/Components/modal/modal.css
@@ -19,3 +19,10 @@
 .modal-dialog {
     background-color: white;
 }
+
+
+@media (min-width: 576px) and (max-width: 992px){
+    .modal-dialog {
+        max-width: calc(100% - 10px);
+    }
+}
