remove initial dialog size class

--- a/app/Components/modal/modal.html
+++ b/app/Components/modal/modal.html
@@ -14,7 +14,7 @@
 
 <div class="modal-backdrop fade"></div>
 <div class="modal fade">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog">
         <div class="modal-content">                    
             <div class="modal-header"></div>
             <div class="modal-body"></div>
