--- a/app/Components/dropdown/dropdown.html
+++ b/app/Components/dropdown/dropdown.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../../../node_modules/bootstrap-css-only/css/bootstrap.css">
 <div class="dropdown">
-    <button class="btn dropdown-toggle trigger"></button>
+    <button class="btn-sm btn dropdown-toggle trigger btn-secondary"></button>
     <div class="dropdown-menu">    
         <slot></slot>
     </div>
