--- a/app/browserWindows/main/main.css
+++ b/app/browserWindows/main/main.css
@@ -6,3 +6,29 @@
     row-gap: 10px;
     margin: 10px;
 }
+
+.body {
+    overflow: auto;
+}
+
+.footer {
+    padding: 5px;
+    border-top: solid 1px rgba(128, 128, 128, 0.35);;
+}
+
+html, body {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.runningProcessCount {
+    cursor: pointer;
+}
+
+#github {
+    cursor: pointer;
+}
