--- a/app/browserWindows/main/main.css
+++ b/app/browserWindows/main/main.css
@@ -25,10 +25,6 @@ body {
     flex-direction: column;
 }
 
-.runningProcessCount {
-    cursor: pointer;
-}
-
-#github {
+.runningProcessCount, #github {
     cursor: pointer;
 }
