Added icon and made start stop button the same

--- a/app/Components/runner/runner.html
+++ b/app/Components/runner/runner.html
@@ -3,9 +3,8 @@
     <h1 class="name"></h1>    
     
     <div class="btn-group">
-        <button class="start btn btn-sm btn-primary">Start</button>
+        <button class="action btn btn-sm btn-primary">Start</button>
         <drop-down class="group-left">
-            <button class="terminate btn-sm" disabled>Stop</button>
             <button class="clear-log btn-sm">Clear Log</button>
         </drop-down>
     </div>
