--- a/app/Components/runner/runner.html
+++ b/app/Components/runner/runner.html
@@ -1,12 +1,15 @@
 <link rel="stylesheet" href="../../../node_modules/bootstrap-css-only/css/bootstrap.css">
 <link rel="stylesheet" href="../../../node_modules/xterm/dist/xterm.css" />
+<link rel="stylesheet" href="../../../node_modules/xterm/lib/addons/fullscreen/fullscreen.css" />
 
 <div class="d-flex align-items-center justify-content-between flex-row">
     <h1 class="name"></h1>    
     
     <div class="btn-group">
         <button class="action btn btn-sm btn-primary">Start</button>
+        <button class="full btn btn-sm btn-dark">Full Screen</button>
         <drop-down class="group-left">
+            <button class="clean btn-sm">Clean</button>
             <button class="clear-log btn-sm">Clear Log</button>
         </drop-down>
     </div>
@@ -14,4 +17,5 @@
 <div class="d-flex justify-content-between align-items-center pb-2">
     <span class="state badge"></span>
 </div>
-<div class="terminal"></div>
+<div class="terminal">
+</div>
