--- a/app/Components/runner/runner.html
+++ b/app/Components/runner/runner.html
@@ -17,5 +17,5 @@
 <div class="d-flex justify-content-between align-items-center pb-2">
     <span class="state badge"></span>
 </div>
-<div class="terminal">
+<div class="terminals">
 </div>
