--- a/app/Components/runner/runner.html
+++ b/app/Components/runner/runner.html
@@ -16,6 +16,7 @@
         <button class="action btn btn-sm btn-primary">Start</button>
         <button class="full btn btn-sm btn-dark">Full Screen</button>
         <drop-down class="group-left">
+            <button class="copy-log btn-sm">Copy Log</button>
             <button class="clean btn-sm">Clean</button>
             <button class="clear-log btn-sm">Clear Log</button>
         </drop-down>
@@ -25,4 +26,8 @@
     <span class="state badge"></span>
 </div>
 <div class="terminals">
+    <div class="btn-group full-screen-options">
+        <button class="close-fullscreen btn btn-secondary">Close</button>
+        <button class="copy-log btn btn-info">Copy Log</button>
+    </div>
 </div>
